# LLM-agent-drift

./: .gitignore  CITATION.cff  README.md  SHA256SUMS.txt  experiment.yaml  pyproject.toml  zenodo-metadata.json
data/: SOURCE_AND_LICENSE.md  expanded_n40_index.json
data/tau2bench/converted/: tau2bench-retail-test-adapted-observed.jsonl
results/expanded/replay_run/or_deepseek_v3/learning/: episode_records.jsonl
results/expanded/replay_run/or_gpt4o/learning/: episode_records.jsonl
results/expanded/replay_run/or_gpt4o_mini/learning/: episode_records.jsonl  summary.json
results/expanded/replay_run/or_kimi_k2/learning/: episode_records.jsonl  summary.json
results/expanded/replay_run/or_qwen3_32b/learning/: episode_records.jsonl
results/expanded/rules_run/or_deepseek_v3/learning/: episode_records.jsonl  summary.json
results/expanded/rules_run/or_gpt4o/learning/: episode_records.jsonl
results/expanded/rules_run/or_gpt4o_mini/learning/: episode_records.jsonl  summary.json
results/expanded/rules_run/or_kimi_k2/learning/: episode_records.jsonl
results/expanded/rules_run/or_qwen3_32b/learning/: episode_records.jsonl
scripts/: recompute_metrics.py  run_expanded_evaluation.sh
src/: data_loader.py  drift_injector.py  experiment_config.py  learning_memory.py  output_formatter.py  progress_tracker.py  run_task_success_evaluation.py  structures.py  verify_models.py
src/models/: __init__.py  base_client.py  openrouter_client.py  rate_limiter.py
tests/: test_drift_injector.py  test_learning_memory.py  test_models.py  test_run_task_success_evaluation.py
(+20 files in other folders)
